# OpenHCS

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENT_MANIFESTO.md  ARXIV_OPENHCS_ARCHITECTURE.md  ARXIV_QUICK_START.md  BG_BUILD.txt  CACHING_OPPORTUNITIES.md  CALLBACK_LEAK_FIX_TESTING.md  CHANGELOG.md  CHANGELOG_v0.2.1.md  CHANGELOG_v0.2.2.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.4.2_to_HEAD.md  CHANGES_CHECKBOX_GROUP_CONSISTENCY.md  CHANGES_CHECKBOX_RACE_CONDITION_FIX.md  CHANGES_LIST_ENUM_AS_LIST_BOOL.md  CONTEXT_ENGINE_QUICK_REFERENCE.md  CONTEXT_ENGINE_SETUP.md  CONTEXT_ENGINE_STATUS.txt  CONTEXT_ENGINE_TEST_RESULTS.md  CONTEXT_ENGINE_VS_AUGMENT_COMPARISON.md  DOCS_AUDIT_FINDINGS.md  FEATURE_BRANCH_CHANGES.md  FUNCTION_REGISTRY_EXTRACTION_ASSESSMENT.md  GOOD_FAITH_PROTOCOL.md  INPUT_CONVERSION_SOLUTIONS.md  INTEGRATION_BRANCH_READY.md  MANIFESTO.md  METAREGISTRY_CACHING_SUMMARY.md  NESTED_ENABLED_STYLING_FIX.md  OMERO_ZMQ_BACKEND_BUG.md  PAPER_BUILD_BEFORE_AFTER.md  PIPELINE_EDITOR_REACTIVE_LABELS_FIX.md  PR55_CODE_QUALITY_ASSESSMENT.md  PR55_FINAL_SCOPE.md  PROPOSED_PR_DESCRIPTION.md  PR_43_CODE_REVIEW.md  PR_ANALYSIS_AND_RECOMMENDATIONS.md  PR_DESCRIPTION.md  (+110 more)
.github/workflows/: coverage-pages.yml  gui-tests.yml  integration-tests.yml
benchmark/: __init__.py  runner.py
benchmark/adapters/: __init__.py  openhcs.py
benchmark/cellprofiler_library/: __init__.py  contracts.json
benchmark/cellprofiler_pipelines/: ExampleFly.cppipe  ExampleFly_openhcs.py  ExampleHuman.cppipe  ExampleHuman_openhcs.py
benchmark/cellprofiler_source/: clone_cellprofiler.sh  library_functions_list.txt  library_modules_list.txt  library_opts_list.txt  module_list.txt
benchmark/contracts/: dataset.py  metric.py  tool_adapter.py
benchmark/converter/: __init__.py  absorb.py  add_parameter_mappings.py  backfill_parameter_mappings.py  contract_inference.py  convert.py  fix_registry.py  library_absorber.py  llm_converter.py  parser.py  pipeline_generator.py  recategorize_functions.py  settings_binder.py  source_locator.py  system_prompt.py
benchmark/datasets/: __init__.py  acquire.py  registry.py
benchmark/metrics/: __init__.py  memory.py  time.py
benchmark/pipelines/: __init__.py  bbbc021_nuclei_segmentation.py  bbbc022_nuclei_segmentation.py  cellprofiler_nuclei.py  cellprofiler_nuclei_cupy.py  cellprofiler_nuclei_gpu.py  cellprofiler_preprocess.py  registry.py
docs/: ARCHITECTURE_DOCUMENTATION_AUDIT.md  ARCHITECTURE_DOCUMENTATION_STYLE_GUIDE.md  code_complexity_analysis.md  concepts_documentation_plan.md  config_framework_analysis.md  configuration_documentation_update_summary.md  development_setup.md  dirty_tracking_analysis.md  discuss_python_post.md  discuss_python_post_v2.md  dynamic_dependencies_implementation.md  email_martin_teichmann.md  feasibility_cellprofiler_integration.md  flatten_refactor_complete.md  flatten_refactor_final_summary.md  ideas_post_v2.md  multiple_inheritance_placeholder_system_status.md  performance_bottleneck_analysis.md  performance_optimization.md  placeholder_resolution_trace.md  refactor_context_stack_plan.md  refactor_dry_run_results.md  requirements.txt  typing_reply_axes.md  typing_reply_final.md  zmq_execution_implementation_summary.md  zmq_execution_pattern.md
docs/architecture/: ARCHITECTURE_FIXES_DUCK_TYPING_ELIMINATION.md  CHANGELOG_v0.4.4_to_HEAD.md  COMPLETE_SYSTEM_ARCHITECTURE.md  README.md  config_framework_email_summary.md  config_system_architecture.md  lazy_dataclass_code_editor_fix.md  memory-backend-system.md  napari-streaming-system.md  parameter_form_manager_live_context.md  pattern-b-service-based-registry.md  pattern-c-functional-registry.md  pattern-d-manual-registration.md  registry-framework.md
docs/bugs/: global_pipeline_config_sibling_refresh_bug.md  non_nested_reset_placeholder_bug.md
docs/change_reviews/: 2025-09-29_help_docstring_cleanup_review.md
docs/changelogs/: CHANGELOG_v0.3.0.md
docs/development/: field_path_system_redesign_plan.md
docs/papers/: ACCEPTANCE_CRITERIA.md  PENTALOGY_COMBINED.md  README.md  TRILOGY_COMBINED.md  axioms_paper1.txt  nominal_proof_v3_review.md  nominal_typing_complete.md  nominal_typing_proof.html  nominal_typing_proof.md  nominal_typing_proof_v1_draft.md  nominal_typing_proof_v2_toplas.md  nominal_typing_proof_v3_scp.html  nominal_typing_proof_v3_scp.md  restructuring_plan.md  restructuring_plan_toplas.md  scp_submission_metadata.md
docs/pep_drafts/: axes_refactoring_analysis.md  pep_parametric_type.md  pep_runtime_type_identity.md
examples/: benchmark_example.py  import_test_data.py  import_test_plate.py  list_omero_plates.py  omero_demo.py  test_execution_server_direct.py  test_execution_server_with_code.py  test_omero_integration.py  test_zmq_execution_pattern.py  test_zmq_with_real_plate.py
hooks/: post-checkout
objectstate/: __init__.py
omero_openhcs/: INSTALL.md  MANIFEST.in  README.md  setup.py
openhcs/: __init__.py  config_framework
openhcs_build/: __init__.py
paper/: 01_abstract.md  02_introduction.md  06_figures.md  README.md  benchmarking_plan.md  notes.md
plans/: cellprofiler_openhcs_architecture_mapping.md  cellprofiler_refactor_plan.md  materialization_standardization_plan.md  root-artifact-cleanup.md  runtime_externalization_plan.md  zeroc_ice_dependency_solution.md
proofs/: abstract_class_system.lean  discipline_migration.lean  lakefile.lean  nominal_resolution.lean
pyproject_hooks/: build_editable.py
scripts/: BUILD_PAPERS_USAGE.md  CONVERSION_CHECKLIST.md  add_dois_to_references.py  annotate_wells_with_experimental_metadata.py  build_paper_markdown.sh  build_papers.py  build_papers.sh  cleanup_latex_with_ollama.sh  convert_paper_to_latex.py  convert_to_latex.sh  dev_install.py  fix_latex_errors.py  fix_latex_structure.py  install_omero_deps.py  package_arxiv.sh  papers.yaml  prototype_flatten_object_state.py  prototype_unified_none_forcing.py  quick_start.sh  release.py  requirements.txt  restructure_papers.py  run_experimental_analysis.py  test_real_global_config.py  update_version.py  verify_release_ready.py
tests/: conftest.py
(+1374 files in other folders)
